syntax = "proto3";

package quary.service.v1;

option java_multiple_files = true;

message Var {
  string name = 1;
  string value = 2;
}

// Configuration describes the configuration of the project.
message ConnectionConfig {
  oneof config {
    ConnectionConfigDuckDB duckdb = 1;
    ConnectionConfigDuckDBInMemory duckdb_in_memory = 2;
    ConnectionConfigSqLite sqlite = 3;
    ConnectionConfigSqLiteInMemory sqlite_in_memory = 4;
    ConnectionConfigBigQuery big_query = 5;
    ConnectionConfigSnowflake snowflake = 6;
    ConnectionConfigPostgres postgres = 7;
    ConnectionConfigRedshift redshift = 9;
    ConnectionConfigClickHouse clickhouse = 10;
    ConnectionConfigDremio dremio = 12;
  }

  repeated Var vars = 8;
  // pre_run_scripts is a list of scripts that should be run before a run job against the database. This is useful for
  // setting up the database for the run job. For example creating UDFs or installing plugins ...
  // The scripts are run in order and should be idempotent.
  // The list points to the location of the script in the project.
  repeated string pre_run_scripts = 11;

  message ConnectionConfigSqLite {
    string path = 1;
  }

  message ConnectionConfigSqLiteInMemory {}

  message ConnectionConfigDuckDB {
    string path = 1;
    optional string schema = 2;
  }

  message ConnectionConfigDuckDBInMemory {
    optional string schema = 1;
  }

  message ConnectionConfigPostgres {
    string schema = 1;
  }

  message ConnectionConfigRedshift {
    string schema = 1;
  }

  message ConnectionConfigBigQuery {
    string project_id = 1;
    string dataset_id = 2;
  }

  message ConnectionConfigSnowflake {
    string account_url = 1;
    string client_id = 2;
    string client_secret = 3;
    string role = 4; // TODO: think about making optional
    string database = 5;
    string schema = 6;
    string warehouse = 7;
  }

  message ConnectionConfigClickHouse {
    string database = 1;
  }

  message ConnectionConfigDremio {
    // Defaults to $scratch
    optional string object_storage_source = 1;
    // Defaults to no_schema
    optional string object_storage_path = 2;
    // Defaults to @<username
    optional string dremio_space = 3;
    // Defaults to no_schema
    optional string dremio_space_folder = 4;
  }
}
